--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Repositorio Para prova tecnica NTT",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "npx cypress open"
   },
   "author": "",
   "license": "ISC",
